Erste versucht mit TI RTOS mit sensor hub

--- a/Beispiele/rfPacketRx_CC2650_LAUNCHXL_TI_CC2650F128/src/sysbios/makefile
+++ b/Beispiele/rfPacketRx_CC2650_LAUNCHXL_TI_CC2650F128/src/sysbios/makefile
@@ -16,7 +16,7 @@ BIOS_INC  = -I"C:/ti/tirtos_cc13xx_cc26xx_2_21_00_06/products/bios_6_46_01_37/pa
 
 TARGET_INC = -I"C:/ti/tirtos_cc13xx_cc26xx_2_21_00_06/products/bios_6_46_01_37/packages/"
 
-INCS = $(BIOS_INC) $(TARGET_INC)  --include_path="C:/ti/ccsv6/tools/compiler/ti-cgt-arm_16.6.0.STS/include" --include_path="C:/Users/Tobias/Documents/AlienSoccer/Beispiele/rfPacketRx_CC2650_LAUNCHXL_TI_CC2650F128" --include_path="C:/Users/Tobias/Documents/AlienSoccer/Beispiele/rfPacketRx_CC2650_LAUNCHXL_TI_CC2650F128/smartrf_settings" --include_path="C:/ti/tirtos_cc13xx_cc26xx_2_21_00_06/products/cc26xxware_2_24_03_17272"  -IC:/ti/tirtos_cc13xx_cc26xx_2_21_00_06/products/bios_6_46_01_37/packages/ 
+INCS = $(BIOS_INC) $(TARGET_INC)  --include_path="D:/rfPacketTx_CC2650_LAUNCHXL_TI" --include_path="D:/rfPacketTx_CC2650_LAUNCHXL_TI/smartrf_settings" --include_path="C:/ti/tirtos_cc13xx_cc26xx_2_21_00_06/products/cc26xxware_2_24_03_17272" --include_path="C:/ti/ccsv6/tools/compiler/ti-cgt-arm_16.6.0.STS/include"  -IC:/ti/tirtos_cc13xx_cc26xx_2_21_00_06/products/bios_6_46_01_37/packages/ 
 
 CC = C:/ti/ccsv6/tools/compiler/ti-cgt-arm_16.6.0.STS/bin/armcl -c $(CCOPTS) -I C:/ti/ccsv6/tools/compiler/ti-cgt-arm_16.6.0.STS/include
 ASM = C:/ti/ccsv6/tools/compiler/ti-cgt-arm_16.6.0.STS/bin/armcl -c $(CCOPTS) -I C:/ti/ccsv6/tools/compiler/ti-cgt-arm_16.6.0.STS/include
