--- a/Beispiele/rfPacketRx_CC2650_LAUNCHXL_TI_CC2650F128/src/makefile.libs
+++ b/Beispiele/rfPacketRx_CC2650_LAUNCHXL_TI_CC2650F128/src/makefile.libs
@@ -1,6 +1,6 @@
 #
 # This file was generated based on the configuration script:
-#     C:\Users\Tobias\Documents\AlienSoccer\Beispiele\rfPacketRx_CC2650_LAUNCHXL_TI_CC2650F128\rfExamples.cfg
+#     D:\rfPacketTx_CC2650_LAUNCHXL_TI\rfExamples.cfg
 #
 # This makefile may be included in other makefiles that need to build
 # the libraries containing the compiled source files generated as
@@ -14,7 +14,7 @@
 #
 # The absolute path to the generated source directory (at the time the
 # sources were generated) is:
-#    C:\Users\Tobias\Documents\AlienSoccer\Beispiele\rfPacketRx_CC2650_LAUNCHXL_TI_CC2650F128\src
+#    D:\rfPacketTx_CC2650_LAUNCHXL_TI\src
 #
 GEN_SRC_DIR ?= ../src
 
