--- a/Beispiele/hello_CC2650_LAUNCHXL_TI/.cproject
+++ b/Beispiele/hello_CC2650_LAUNCHXL_TI/.cproject
@@ -99,6 +99,7 @@
 					</folderInfo>
 					<sourceEntries>
 						<entry excluding="src" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="src/sysbios"/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
@@ -202,6 +203,7 @@
 					</folderInfo>
 					<sourceEntries>
 						<entry excluding="src" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="src/sysbios"/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
