--- a/Beispiele/Bridge_Launchpad/.project
+++ b/Beispiele/Bridge_Launchpad/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Server_Launchpad</name>
+	<name>Bridge_Launchpad</name>
 	<comment></comment>
 	<projects>
 	</projects>
