--- a/Projektcode/Bridge_Launchpad/src/makefile.libs
+++ b/Projektcode/Bridge_Launchpad/src/makefile.libs
@@ -1,6 +1,6 @@
 #
 # This file was generated based on the configuration script:
-#     C:\Users\Tobias\Documents\AlienHacky\Bridge_Launchpad\rfExamples.cfg
+#     C:\Users\Tobias\Documents\AlienHacky\Projektcode\Bridge_Launchpad\rfExamples.cfg
 #
 # This makefile may be included in other makefiles that need to build
 # the libraries containing the compiled source files generated as
@@ -14,7 +14,7 @@
 #
 # The absolute path to the generated source directory (at the time the
 # sources were generated) is:
-#    C:\Users\Tobias\Documents\AlienHacky\Bridge_Launchpad\src
+#    C:\Users\Tobias\Documents\AlienHacky\Projektcode\Bridge_Launchpad\src
 #
 GEN_SRC_DIR ?= ../src
 
