--- a/Projektcode/bridge/src/makefile.libs
+++ b/Projektcode/bridge/src/makefile.libs
@@ -1,6 +1,6 @@
 #
 # This file was generated based on the configuration script:
-#     C:\AlienHacky\Projektcode\bridge\bridge.cfg
+#     C:\Users\Tobias\Documents\AlienSoccer\Projektcode\bridge\bridge.cfg
 #
 # This makefile may be included in other makefiles that need to build
 # the libraries containing the compiled source files generated as
@@ -14,7 +14,7 @@
 #
 # The absolute path to the generated source directory (at the time the
 # sources were generated) is:
-#    C:\AlienHacky\Projektcode\bridge\src
+#    C:\Users\Tobias\Documents\AlienSoccer\Projektcode\bridge\src
 #
 GEN_SRC_DIR ?= ../src
 
